<resources>
    <string name="app_name">农源宝</string>
    <string name="qcloud">旗云科技</string>
    <string name="title_suyuan">农资溯源管理系统</string>
    <string name="title_launch">启动页</string>
    <string name="title_main">首页</string>
    <string name="title_login">登录</string>
    <string name="title_cashier">收银台</string>
    <string name="title_sellers">销售产品</string>
    <string name="title_purchase">产品入库</string>
    <string name="title_modify_price">售价和库存警告线设置</string>
    <string name="title_selling_water">销售流水</string>
    <string name="title_out_storage">撤销入库</string>
    <string name="title_store_product">门店产品</string>
    <string name="title_my_product">我的私有产品</string>
    <string name="title_credit_record">赊账记录</string>
    <string name="title_return">退货</string>
    <string name="title_return_record">退货记录</string>
    <string name="title_suyuan_record">溯源记录</string>
    <string name="title_form">报表</string>
    <string name="title_my_supplier">我的供应商管理</string>
    <string name="title_store_info">门店信息</string>
    <string name="title_device_state">设备状态</string>
    <string name="title_search_suyuan">扫溯源码搜索</string>
    <string name="title_search_batch">扫批次条形码搜索</string>
    <string name="title_search_product">扫产品条形码搜索</string>
    <string name="title_forget_password">忘记密码</string>
    <string name="title_warn">告警提示</string>
    <string name="title_stock_details">库存详情</string>
    <string name="title_dialog_return">退货确认</string>
    <string name="title_create_product">我的私有产品</string>
    <string name="title_my_product_details">我的产品详情</string>
    <string name="title_select_date">选择日期</string>
    <string name="btn_confirm">确认</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_logout">退出登录</string>
    <string name="btn_go_main">返回首页</string>
    <string name="btn_login">登录</string>
    <string name="btn_forrget_login">忘记密码</string>
    <string name="btn_updata_password">修改密码</string>
    <string name="btn_search">搜索</string>
    <string name="btn_get_more">查看更多</string>
    <string name="btn_search_suyuan_code">点击扫溯源码</string>
    <string name="btn_search_batch_bar_code">点击扫批次条形码</string>
    <string name="btn_search_product_bar_code">点击扫产品条形码</string>
    <string name="btn_returned_good">退货</string>
    <string name="btn_settlement">结算</string>
    <string name="btn_edit_stock_warn">编辑库存警告线</string>
    <string name="btn_out_storage">撤销入库</string>
    <string name="btn_input_purchaser_info">输入购买者信息</string>
    <string name="btn_credit">赊账</string>
    <string name="btn_cash">现金</string>
    <string name="btn_alipay">支付宝</string>
    <string name="btn_wechat">微信</string>
    <string name="btn_i_know">我知道了</string>
    <string name="btn_confirm_pay_and_print_suyuan_code">确认并打印溯源码</string>
    <string name="btn_re_select_pay_method">重选支付方式</string>
    <string name="btn_confirm_in_storage">确定入库</string>
    <string name="btn_clear">清空</string>
    <string name="btn_add_supplier">新增</string>
    <string name="btn_add_new_supplier">新增供应商</string>
    <string name="btn_pay_credit">还款</string>
    <string name="btn_confirm_in_storage_and_print_code">确认并打印批次条形码</string>
    <string name="btn_my_product">我的产品</string>
    <string name="btn_create_product">创建私有产品</string>
    <string name="btn_product_details">了解更多详情</string>
    <string name="btn_product_price">产品售价</string>
    <string name="btn_adjust_warn">调整警告线</string>
    <string name="btn_print">打印</string>
    <string name="btn_edit_info">修改信息</string>
    <string name="btn_next">下一步</string>
    <string name="btn_confirm_create">确定创建</string>
    <string name="btn_confirm_edit">确定修改</string>
    <string name="btn_add">添加</string>
    <string name="btn_confirm_add">确认添加</string>
    <string name="btn_edit_product_info">修改产品信息</string>
    <string name="btn_ok_out_storge">确认出库</string>
    <string name="btn_to_create">去创建</string>
    <string name="btn_create_code">系统生成</string>
    <string name="btn_clear_all">全部清空</string>
    <string name="btn_delete">删除</string>
    <string name="cb_remember_password">记住密码</string>
    <string name="hint_main_search">请输入"溯源码"、"批次条形码"、"产品条形码"</string>
    <string name="hint_suyuan_code_search">请输入溯源码</string>
    <string name="hint_batch_code_search">请输入批次条形码</string>
    <string name="hint_product_code_search">请输入产品条形码</string>
    <string name="et_hint_account">请输入您的账号</string>
    <string name="et_hint_password">请输入您的密码</string>
    <string name="et_hint_original_password">请输入原来的密码</string>
    <string name="et_hint_phone">请输入手机号</string>
    <string name="et_hint_code">请输入验证码</string>
    <string name="et_hint_new_password">请输入您的新密码</string>
    <string name="et_hint_2rd_password">请您再次确认密码</string>
    <string name="et_hint_order_number">请输入批次条形码</string>
    <string name="hint_input_other_instructions">请输入您要写的说明</string>
    <string name="hint_input_user_id">请输入身份证号</string>
    <string name="hint_input_purchase_name">请输入购买者真实姓名</string>
    <string name="hint_input_mobile">请输入联系电话</string>
    <string name="hint_input_water_number">请输入流水号，采购人</string>
    <string name="hint_input_product_code_and_name">请输入产品条形码或产品名称</string>
    <string name="hint_product_code_and_name">产品条形码/产品名称</string>
    <string name="hint_input_money">请输入有效的金额</string>
    <string name="hint_input_name_idcard_phone">请输入姓名/身份证号/电话号码</string>
    <string name="hint_input_name_supplier">请输入供应商名称/负责人</string>
    <string name="hint_input_supplier_name">请输入供应商名称</string>
    <string name="hint_input_supplier_address">请输入供应商地址</string>
    <string name="hint_input_remark">请输入你要备注的话</string>
    <string name="hint_input_contact_person">请输入联系人</string>
    <string name="hint_input_contact_phone">请输入联系电话</string>
    <string name="hint_input_product_bar_code">请输入产品条形码</string>
    <string name="hint_input_product_name">请输入产品名称</string>
    <string name="hint_select_product_classify">请选择产品分类</string>
    <string name="hint_input_product_spec">请输入产品规格</string>
    <string name="hint_input_product_price">请输入零售价</string>
    <string name="hint_input_product_unit">请输入产品单位</string>
    <string name="hint_select_product_mill">请选择生产厂家</string>
    <string name="hint_input_mill_address">请输入厂家地址</string>
    <string name="hint_input_registration_code">请输入登记证号</string>
    <string name="hint_input_production_license">请输入生产许可证号</string>
    <string name="hint_input_product_standard">请输入产品标准证号</string>
    <string name="hint_input_product_introduce">请输入产品详情</string>
    <string name="hint_input_value">请输入值</string>
    <string name="hint_input_attr">安环曹素昂#100g*20瓶/件;莠去津50%(悬浮济)#100g*20瓶/件</string>
    <string name="hint_input_storge_number">请输入出货数量</string>
    <string name="hint_input_store_address">请输入门店地址</string>
    <string name="hint_input_store_person">请输入店主名字</string>
    <string name="hint_input_suyuan_name">请输入溯源码/产品名称/生产厂家</string>
    <string name="hint_input_purchase_number">请输入入库数量</string>
    <string name="hint_input_purchase_price">请输入进货价格</string>
    <string name="hint_select_purchase_birthday">请选择生产日期</string>
    <string name="hint_select_purchase_valid_day">请选择有效期截止时间</string>
    <string name="hint_input_sell_price">请输入售价</string>
    <string name="hint_input_stock_warn_line">请输入库存警告线</string>
    <string name="hint_input_buy_number">请输入购买数量</string>
    <string name="hint_select_product_classify_search">请选择产品分类</string>
    <string name="hint_select_product_type_search">请选择产品来源</string>
    <string name="hint_select_date">请选择日期</string>
    <string name="toast_app_exit">您确认要离开？</string>
    <string name="toast_logout">您确认要退出账号吗？</string>
    <string name="toast_input_not_null">输入的内容为空</string>
    <string name="toast_login_success">登录成功</string>
    <string name="toast_login_fails">密码或者账号错误</string>
    <string name="toast_list_empty">列表为空</string>
    <string name="toast_no_data">暂无数据</string>
    <string name="toast_no_more_data">暂无更多数据</string>
    <string name="toast_logout_success">退出登录成功</string>
    <string name="toast_logout_failure">退出登录失败</string>
    <string name="toast_no_input_value">请输入内容</string>
    <string name="toast_init_nfc_failure">初始化身份证识别器失败，请重新进入识别</string>
    <string name="toast_get_product_details_failure">获取产品数据为空，请重试</string>
    <string name="toast_input_warn_line">请输入警告线</string>
    <string name="toast_input_price">请输入售价</string>
    <string name="toast_input_stock_warn">请输入库存警告线</string>
    <string name="toast_edit_warn_line_success">调整警告线成功</string>
    <string name="toast_edit_price_success">调整售价成功</string>
    <string name="toast_out_storage_success">撤消入库成功</string>
    <string name="toast_login_timeout">登录超时，请重新登录</string>
    <string name="toast_product_is_empty">获取产品信息出错，请重新进入</string>
    <string name="toast_input_in_storage_number">请输入入库数量</string>
    <string name="toast_input_in_storage_price">请输入进货价格</string>
    <string name="toast_select_product_birthday">请选择产品生产日期</string>
    <string name="toast_select_product_end_day">请选择产品有效期截止时间</string>
    <string name="toast_end_day_min_birthday">产品有效期截止时间不能小于生产日期</string>
    <string name="toast_select_in_storage_supplier">请选择供应商</string>
    <string name="toast_get_product_to_buy">请先获取购买商品</string>
    <string name="toast_input_purchaser_info">请先输入购买者信息</string>
    <string name="toast_input_purchase_mobile">请先输入购买者电话</string>
    <string name="toast_settlement_success">结算成功</string>
    <string name="toast_read_card_error">读证错误</string>
    <string name="toast_read_card_timeout">读证超时，请检查网络连接</string>
    <string name="toast_modify_price_success">修改售价成功</string>
    <string name="toast_modify_stock_warn_success">修改库存警告线成功</string>
    <string name="toast_supplier_id_err">供应商id为空</string>
    <string name="toast_select_registration_code_start">请选择登记证有效期开始时间</string>
    <string name="toast_select_registration_code_end">请选择登记证有效期结束时间</string>
    <string name="toast_select_registration_code_error">登记证有效期结束时间不能小于开始时间</string>
    <string name="toast_success">修改成功</string>
    <string name="toast_password_no_same">输入两次密码不一致</string>
    <string name="toast_start_bigger_end">开始时间不得大于结束时间，请重新选择</string>
    <string name="toast_error">操作有误</string>
    <string name="tab_time">时间</string>
    <string name="tab_invalid_suyuan">作废溯源码</string>
    <string name="tab_return_name">退货产品名称</string>
    <string name="tab_goods_rule">产品规格</string>
    <string name="tab_handle_member">操作人</string>
    <string name="tag_goods_order">序号</string>
    <string name="tag_goods_rule">规格</string>
    <string name="tag_goods_name">产品名称</string>
    <string name="tag_goods_data">批次</string>
    <string name="tag_goods_control">操作</string>
    <string name="tag_list_name">姓名</string>
    <string name="tag_list_idcard">身份证</string>
    <string name="tag_list_phone">联系电话</string>
    <string name="tag_list_credit">赊账金额</string>
    <string name="tag_list_water">流水号</string>
    <string name="tag_list_payed_money">已还金额</string>
    <string name="tag_name">名称</string>
    <string name="tag_number">数量</string>
    <string name="tag_price">价格</string>
    <string name="tag_product_image">产品图片</string>
    <string name="tag_product_bar_code">产品条形码</string>
    <string name="tag_product_name">产品名称</string>
    <string name="tag_product_manufacturer">生产厂家</string>
    <string name="tag_product_spec">产品规格</string>
    <string name="tag_product_stock">当前库存</string>
    <string name="tag_product_valid">有效期</string>
    <string name="tag_product_operator">操作人</string>
    <string name="tag_total_stock_number">总库存(件): %d</string>
    <string name="tag_in_storage_batch">入库批次</string>
    <string name="tag_in_storage_time">入库时间</string>
    <string name="tag_in_storage_number">入库数量</string>
    <string name="tag_in_storage_valid">产品有效期</string>
    <string name="tag_in_storage_price">进货价格</string>
    <string name="tag_suyuan_record_suyuan_code">溯源码</string>
    <string name="tag_purchaser">购买人</string>
    <string name="tag_store_address">门店地址</string>
    <string name="tag_sale_time">销售时间</string>
</resources>