<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/itemHeight"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_batch_number"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.8"
        android:gravity="center"
        android:textColor="@color/colorTitle"
        android:textSize="@dimen/textSize"
        tools:text="@string/tag_in_storage_batch"/>

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:gravity="center"
        android:textColor="@color/colorTitle"
        android:textSize="@dimen/textSize"
        tools:text="@string/tag_in_storage_time"/>

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:gravity="center"
        android:textColor="@color/colorTitle"
        android:textSize="@dimen/textSize"
        tools:text="@string/tag_in_storage_number"/>

    <TextView
        android:id="@+id/tv_stock"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:gravity="center"
        android:textColor="@color/colorTitle"
        android:textSize="@dimen/textSize"
        tools:text="@string/tag_product_stock"/>

    <TextView
        android:id="@+id/tv_product_valid"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:gravity="center"
        android:textColor="@color/colorTitle"
        android:textSize="@dimen/textSize"
        tools:text="@string/tag_in_storage_valid"/>

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:gravity="center"
        android:textColor="@color/colorTitle"
        android:textSize="@dimen/textSize"
        tools:text="@string/tag_in_storage_price"/>

    <TextView
        android:id="@+id/tv_operator"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:gravity="center"
        android:textColor="@color/colorTitle"
        android:textSize="@dimen/textSize"
        tools:text="@string/tag_product_operator"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/margin_2">

        <Button
            android:id="@+id/btn_print"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btnHeight"
            android:background="@drawable/btn_frame_radius_selector"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/btnTextSize"
            android:text="@string/btn_print"/>
    </LinearLayout>
</LinearLayout>
