<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/itemHeight"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_suyuan_number"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:gravity="center"
        android:textColor="@color/colorTitle"
        android:textSize="@dimen/textSize"
        tools:text="@string/tag_suyuan_record_suyuan_code"/>

    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.5"
        android:gravity="center"
        android:textColor="@color/colorTitle"
        android:textSize="@dimen/textSize"
        tools:text="@string/tag_product_name"/>

    <TextView
        android:id="@+id/tv_product_spec"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:gravity="center"
        android:textColor="@color/colorTitle"
        android:textSize="@dimen/textSize"
        tools:text="@string/tag_product_spec"/>

    <TextView
        android:id="@+id/tv_purchaser"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:gravity="center"
        android:textColor="@color/colorTitle"
        android:textSize="@dimen/textSize"
        tools:text="@string/tag_purchaser"/>

    <TextView
        android:id="@+id/tv_store_address"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.3"
        android:gravity="center"
        android:textColor="@color/colorTitle"
        android:textSize="@dimen/textSize"
        tools:text="@string/tag_store_address"/>

    <TextView
        android:id="@+id/tv_sale_time"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:gravity="center"
        android:textColor="@color/colorTitle"
        android:textSize="@dimen/textSize"
        tools:text="@string/tag_sale_time"/>

</LinearLayout>
