<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="@dimen/margin_14"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_suyuan_no"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tab_invalid_suyuan"
        android:textColor="@color/colorText"
        android:textSize="@dimen/textSize" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tab_return_name"
        android:textColor="@color/colorText"
        android:textSize="@dimen/textSize" />

    <TextView
        android:id="@+id/tv_rule"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tab_goods_rule"
        android:textColor="@color/colorText"
        android:textSize="@dimen/textSize" />

    <TextView
        android:id="@+id/tv_handle_member"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tab_handle_member"
        android:textColor="@color/colorText"
        android:textSize="@dimen/textSize" />
    <TextView
        android:id="@+id/tv_time"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tab_time"
        android:textColor="@color/colorText"
        android:textSize="@dimen/textSize" />


</LinearLayout>