<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="@dimen/margin_12"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tab_time"
        android:textColor="@color/colorText"
        android:textSize="@dimen/textSize" />

    <TextView
        android:id="@+id/tv_water_number"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tag_list_water"
        android:textColor="@color/colorText"
        android:textSize="@dimen/textSize" />

    <TextView
        android:id="@+id/tv_credit"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tag_list_credit"
        android:textColor="@color/colorText"
        android:textSize="@dimen/textSize" />
    <TextView
        android:id="@+id/tv_payed_money"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tag_list_payed_money"
        android:textColor="@color/colorText"
        android:textSize="@dimen/textSize" />
    <RelativeLayout
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="match_parent">
        <Button
            android:textSize="@dimen/typeTextSize"
            android:textColor="@color/white"
            android:text="@string/btn_pay_credit"
            android:id="@+id/btn_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_radius_selector"
        />
    </RelativeLayout>



</LinearLayout>