<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="@dimen/margin_6"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tag_name"
        android:textColor="@color/colorText"
        android:textSize="@dimen/textSize" />

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tag_number"
        android:textColor="@color/colorText"
        android:textSize="@dimen/textSize" />

    <TextView
        android:id="@+id/tv_rule"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tag_goods_rule"
        android:textColor="@color/colorText"
        android:textSize="@dimen/textSize" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tag_price"
        android:textColor="@color/colorText"
        android:textSize="@dimen/textSize" />


</LinearLayout>