<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="0dp"
    app:cardCornerRadius="1dp"
    tools:context=".ui.store.widget.StockDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/barHeight">

            <TextView
                android:id="@+id/tv_total_stock"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/layoutMargin"
                android:layout_marginStart="@dimen/layoutMargin"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/titleTextSize"
                tools:text="@string/tag_total_stock_number"/>

        </RelativeLayout>

        <View
            style="@style/LineHorizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/tabHeight"
            android:orientation="horizontal"
            android:background="@color/white">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:textColor="@color/colorTitle"
                android:textSize="@dimen/textSize"
                android:text="@string/tag_in_storage_batch"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:gravity="center"
                android:textColor="@color/colorTitle"
                android:textSize="@dimen/textSize"
                android:text="@string/tag_in_storage_time"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:textColor="@color/colorTitle"
                android:textSize="@dimen/textSize"
                android:text="@string/tag_in_storage_number"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:textColor="@color/colorTitle"
                android:textSize="@dimen/textSize"
                android:text="@string/tag_product_stock"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:gravity="center"
                android:textColor="@color/colorTitle"
                android:textSize="@dimen/textSize"
                android:text="@string/tag_in_storage_valid"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:textColor="@color/colorTitle"
                android:textSize="@dimen/textSize"
                android:text="@string/tag_in_storage_price"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:textColor="@color/colorTitle"
                android:textSize="@dimen/textSize"
                android:text="@string/tag_product_operator"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:gravity="center"
                android:textColor="@color/colorTitle"
                android:textSize="@dimen/textSize"
                android:text="@string/tag_goods_control"/>
        </LinearLayout>

        <com.qcloud.qclib.refresh.pullrefresh.PullRecyclerView
            android:id="@+id/list_product"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
</android.support.v7.widget.CardView>


