<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="@dimen/margin_12"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tag_goods_order"
        android:textColor="@color/colorText"
        android:textSize="@dimen/textSize" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tag_goods_name"
        android:textColor="@color/colorText"
        android:textSize="@dimen/textSize" />

    <TextView
        android:id="@+id/tv_rule"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tag_goods_rule"
        android:textColor="@color/colorText"
        android:textSize="@dimen/textSize" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tag_goods_data"
        android:textColor="@color/colorText"
        android:textSize="@dimen/textSize" />

    <RelativeLayout
        android:id="@+id/iv_delete"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:src="@drawable/icon_account" >
        <ImageView
            android:background="@drawable/selector_btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</LinearLayout>